--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
     <p>He logrado resumir 6 años de aprendizaje en este curso práctico de trading desde cero para que tengas una curva de aprendizaje rápida sin errores. Si ya tienes algo de conocimiento en el mundo del trading pero quieres capitalizarte rápido, el curso un poco más avanzado de índices sintéticos es ideal para ti.</p>
     <p class="bold-uppercase">Actualmente el curso está cerrado, pero pronto abrimos una nueva edición.</p>
     <p>Dejá tu correo para ser el primero en enterarte y obtener un descuento.</p>
-    <form action="https://formspree.io/f/TU-CODIGO" method="POST">
+    <form action="https://formspree.io/f/TU-CODIGO" method="POST" onsubmit="setTimeout(() => window.location.href = 'gracias-4.html', 100); return true;">
+
 
       <input type="text" name="nombre" placeholder="Nombre" />
       <input type="email" name="email" placeholder="Correo electrónico" required />
