--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -85,26 +84,29 @@
     <p>He logrado resumir 6 años de aprendizaje en este curso práctico de trading desde cero para que tengas una curva de aprendizaje rápida sin errores. Si ya tienes algo de conocimiento en el mundo del trading pero quieres capitalizarte rápido, el curso un poco más avanzado de índices sintéticos es ideal para ti.</p>
     <p class="bold-uppercase">Actualmente el curso está cerrado, pero pronto abrimos una nueva edición.</p>
     <p>Dejá tu correo para ser el primero en enterarte y obtener un descuento.</p>
+    
     <form action="https://formspree.io/f/TU-CODIGO" method="POST" onsubmit="setTimeout(() => window.location.href = 'gracias-4.html', 100); return true;">
-  <input type="text" name="nombre" placeholder="Nombre" />
-  <input type="email" name="email" placeholder="Correo electrónico" required />
-  <button type="submit">Avisame cuando abra</button>
-</form>
-
-
       <input type="text" name="nombre" placeholder="Nombre" />
       <input type="email" name="email" placeholder="Correo electrónico" required />
       <button type="submit">Avisame cuando abra</button>
     </form>
+
     <ul>
       <li>Aprendé desde cero o mejorá tu operativa actual</li>
       <li>Acceso a clases grabadas + sesiones en vivo</li>
       <li>Comunidad privada de alumnos</li>
       <li>Apoyo personalizado y estrategias comprobadas</li>
     </ul>
+
     <p style="margin-top: 2rem; font-weight: 600;">Ya son más de <span style="color: #2ECC71;">600 alumnos activos</span> aprendiendo y aplicando lo que enseño.</p>
   </div>
+
   <footer style="margin-top: 3rem; text-align: center; font-weight: bold; color: #2ECC71;">
+    NW TRADING
+  </footer>
+</body>
+</html>
+
     NW TRADING
   </footer>
 </body>
