--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
     <p class="bold-uppercase">Actualmente el curso está cerrado, pero pronto abrimos una nueva edición.</p>
     <p>Dejá tu correo para ser el primero en enterarte y obtener un descuento.</p>
 
-    <form action="https://formspree.io/f/TU-CODIGO" method="POST" onsubmit="setTimeout(() => window.location.href = 'gracias-4.html', 100); return true;">
+    <form action="https://formspree.io/f/xgvylqpr" method="POST" onsubmit="setTimeout(() => window.location.href = 'gracias-4.html', 100); return true;">
+
       <input type="text" name="nombre" placeholder="Nombre" />
       <input type="email" name="email" placeholder="Correo electrónico" required />
       <button type="submit">Avisame cuando abra</button>
