--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background: #0B1F36 url('https://www.transparenttextures.com/patterns/graphy.png');
+      background: url('https://cdn.midjourney.com/00df8c9a-e0ef-4a84-8c82-fb98e4bc5fa3/0_2.webp') no-repeat center center fixed;
+      background-size: cover;
       color: white;
       display: flex;
       flex-direction: column;
@@ -22,6 +23,9 @@
     .container {
       max-width: 500px;
       text-align: center;
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 2rem;
+      border-radius: 10px;
     }
 
     h1 {
@@ -72,26 +76,42 @@
     }
 
     li::before {
-      content: '✔';
+      content: '\2714';
       margin-right: 0.5rem;
       color: #2ECC71;
+      font-weight: bold;
+    }
+
+    footer {
+      margin-top: 3rem;
+      text-align: center;
+      font-weight: bold;
+      color: #2ECC71;
+    }
+
+    @media (max-width: 600px) {
+      body {
+        padding: 1rem;
+      }
+
+      .container {
+        width: 100%;
+        padding: 1.5rem;
+      }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Aprende Trading desde cero y logra una capitalización rápida con los índices sintéticos</h1>
-    <p>He logrado resumir 6 años de aprendizaje en este curso práctico de trading desde cero para que tengas una curva de aprendizaje rápida sin errores. Si ya tienes algo de conocimiento en el mundo del trading pero quieres capitalizarte rápido, el curso un poco más avanzado de índices sintéticos es ideal para ti.</p>
+    <h1>Aprendé Trading desde cero y lográ una capitalización rápida con los índices sintéticos</h1>
+    <p>He logrado resumir 6 años de aprendizaje en este curso práctico de trading desde cero para que tengas una curva de aprendizaje rápida sin errores. Si ya tenés algo de conocimiento en el mundo del trading pero querés capitalizarte rápido, el curso un poco más avanzado de índices sintéticos es ideal para vos.</p>
     <p class="bold-uppercase">Actualmente el curso está cerrado, pero pronto abrimos una nueva edición.</p>
     <p>Dejá tu correo para ser el primero en enterarte y obtener un descuento.</p>
-
     <form action="https://formspree.io/f/xgvylqpr" method="POST" onsubmit="setTimeout(() => window.location.href = 'gracias-4.html', 100); return true;">
-
       <input type="text" name="nombre" placeholder="Nombre" />
       <input type="email" name="email" placeholder="Correo electrónico" required />
       <button type="submit">Avisame cuando abra</button>
     </form>
-
     <ul>
       <li>Aprendé desde cero o mejorá tu operativa actual</li>
       <li>Acceso a clases grabadas + sesiones en vivo</li>
@@ -100,8 +120,9 @@
     </ul>
     <p style="margin-top: 2rem; font-weight: 600;">Ya son más de <span style="color: #2ECC71;">600 alumnos activos</span> aprendiendo y aplicando lo que enseño.</p>
   </div>
-  <footer style="margin-top: 3rem; text-align: center; font-weight: bold; color: #2ECC71;">
+  <footer>
     NW TRADING
   </footer>
 </body>
 </html>
+
