--- a/index.html
+++ b/index.html
@@ -6,30 +6,21 @@
   <title>Curso de Trading - Próxima Edición</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
     body {
+      margin: 0;
       font-family: 'Inter', sans-serif;
-      background: url('https://images.unsplash.com/photo-1612837017391-92b6dba2c967?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80') no-repeat center center fixed;
-      background-size: cover;
+      background: linear-gradient(to bottom, #0B1F36, #09192A);
       color: white;
-      min-height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       padding: 2rem;
+      min-height: 100vh;
     }
 
     .container {
-      max-width: 700px;
-      background-color: rgba(0, 0, 0, 0.75);
-      padding: 2rem;
-      border-radius: 12px;
+      max-width: 500px;
       text-align: center;
     }
 
@@ -42,14 +33,13 @@
     p {
       font-size: 1rem;
       color: #d0d6e1;
-      margin-bottom: 1rem;
+      margin-bottom: 1.5rem;
     }
 
     .bold-uppercase {
       font-weight: 700;
       text-transform: uppercase;
       color: #ffffff;
-      margin-bottom: 1rem;
     }
 
     input[type="text"],
@@ -72,33 +62,19 @@
       font-size: 1rem;
       font-weight: 600;
       cursor: pointer;
-      margin-bottom: 1.5rem;
     }
 
     ul {
       list-style: none;
       padding: 0;
       text-align: left;
+      margin-top: 2rem;
     }
 
     li::before {
       content: '✔';
       margin-right: 0.5rem;
-      color: #2ECC71;
-    }
-
-    footer {
-      margin-top: 2rem;
-      text-align: center;
-      font-weight: bold;
-      color: #2ECC71;
-    }
-
-    @media (min-width: 768px) {
-      .container {
-        width: 80%;
-        max-width: 900px;
-      }
+      color: #2ECC71 !important;
     }
   </style>
 </head>
@@ -106,13 +82,15 @@
   <div class="container">
     <h1>Aprendé Trading desde cero y lográ una capitalización rápida con los índices sintéticos</h1>
     <p>He logrado resumir 6 años de aprendizaje en este curso práctico de trading desde cero para que tengas una curva de aprendizaje rápida sin errores. Si ya tenés algo de conocimiento en el mundo del trading pero querés capitalizarte rápido, el curso un poco más avanzado de índices sintéticos es ideal para vos.</p>
-    <p class="bold-uppercase">ACTUALMENTE EL CURSO ESTÁ CERRADO, PERO PRONTO ABRIMOS UNA NUEVA EDICIÓN.</p>
+    <p class="bold-uppercase">Actualmente el curso está cerrado, pero pronto abrimos una nueva edición.</p>
     <p>Dejá tu correo para ser el primero en enterarte y obtener un descuento.</p>
-    <form action="https://formspree.io/f/xgvyIqpr" method="POST" onsubmit="setTimeout(() => window.location.href = 'gracias-4.html', 100); return true;">
+
+    <form action="https://formspree.io/f/xgvylqpr" method="POST" onsubmit="setTimeout(() => window.location.href = 'gracias-4.html', 100); return true;">
       <input type="text" name="nombre" placeholder="Nombre" />
       <input type="email" name="email" placeholder="Correo electrónico" required />
       <button type="submit">Avisame cuando abra</button>
     </form>
+
     <ul>
       <li>Aprendé desde cero o mejorá tu operativa actual</li>
       <li>Acceso a clases grabadas + sesiones en vivo</li>
@@ -121,7 +99,7 @@
     </ul>
     <p style="margin-top: 2rem; font-weight: 600;">Ya son más de <span style="color: #2ECC71;">600 alumnos activos</span> aprendiendo y aplicando lo que enseño.</p>
   </div>
-  <footer>
+  <footer style="margin-top: 3rem; text-align: center; font-weight: bold; color: #2ECC71;">
     NW TRADING
   </footer>
 </body>
