--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background: url('https://i.ibb.co/MRMZ9C6/bg-trading-dark.jpg') no-repeat center center fixed;
-      background-size: cover;
+      background: linear-gradient(to bottom, #0B1F36, #09192A);
       color: white;
       display: flex;
       flex-direction: column;
@@ -23,9 +22,6 @@
     .container {
       max-width: 500px;
       text-align: center;
-      background-color: rgba(0, 0, 0, 0.65);
-      padding: 2rem;
-      border-radius: 10px;
     }
 
     h1 {
